--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^5.9.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
