--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
-    "eslint": "^5.12.0",
     "firebase": "^5.9.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -29,10 +28,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0"
-  }
+  "devDependencies": {}
 }
